# MultiscreenManga

./: .gitignore  CMakeLists.txt  Makefile  MultiscreenManga.pro  README  README.md  conanfile.py  mainwindow.cpp  mainwindow.h  mangavolume.cpp  mangavolume.h  meson.build  renderwidget.cpp  renderwidget.h
include/: configuration.h  mainwindow.h  mangavolume.h  remotesync.h  remotesyncclient.h  remotesyncserver.h  renderwidget.h  savestate.h  sidebar.h
protobuf/: savestate.proto
src/: configuration.cpp  main.cpp  mainwindow.cpp  mangavolume.cpp  remotesync.cpp  remotesyncclient.cpp  remotesyncserver.cpp  renderwidget.cpp  savestate.cpp  sidebar.cpp
subprojects/: balsa.wrap
